# my-mtproto-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.cfg  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  litestream.yml  main.py  pyproject.toml  requirements.txt  troubles.md
bot/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
bot/src/: bot.py  config.py  dependencies.py  enums.py  error_handler.py  exceptions.py  handlers.py  keyboards.py  main.py  messages.py  router.py
bot/src/core/: backend_client.py  config.py  exceptions.py  handle_error.py
bot/src/domains/free_trial/: __init__.py  client.py  enums.py  handlers.py  messages.py
bot/src/domains/links/: __init__.py  client.py  handlers.py  messages.py
bot/src/domains/payments/: __init__.py  client.py  handlers.py  messages.py
bot/src/domains/referrals/: __init__.py  client.py  handlers.py  messages.py
bot/src/handlers/: __init__.py  free_trial.py  links.py  payments.py  referrals.py  start.py
bot/src/services/: __init__.py  buy_product_service.py  check_first_month_free.py  first_moth_free.py  get_my_servers_service.py  get_product_service.py  get_referral_link.py  get_stars_invoice_data_service.py  handle_error.py  process_win_service.py  referral_cabinet.py  update_link_service.py
bot/tests/: conftest.py  fakes.py  test_config.py  test_dependencies.py  test_error_handler.py  test_handlers.py
bot/tests/core/: test_backend_client.py
bot/tests/domains/free_trial/: test_client.py
bot/tests/domains/links/: test_client.py
bot/tests/domains/payments/: test_client.py
bot/tests/domains/referrals/: test_client.py
docs/: ARCHITECTURE.md  BUSINESS.md  CONTRACTS.md  MODELS.md
docs/apps/: CORE.md  MUSIC.md  NOTIFICATIONS.md  (+3 more)
haproxy/: haproxy.cfg
integration_tests/: README.md  config.py  conftest.py  db.py  helpers.py  settings.py  test_check_availability.py  test_free_trial.py  test_free_trial_errors.py  test_harness_smoke.py  test_my_servers.py  test_payments.py  test_reconcile.py  test_referral_cabinet.py  test_referral_reward.py  test_reissue.py  test_reissue_errors.py
landing/: index.html
nginx/: Dockerfile  nginx.conf
prometheus/: prometheus.yml
(+303 files in other folders)
