[project]
name = "my-mtproto-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.11",
    "djangorestframework>=3.16.1",
    "factory-boy>=3.3.3",
    "pytelegrambotapi>=4.31.0",
    "requests>=2.32.5",
]
