[project]
name = "my-mtproto-backend"
version = "0.1.0"
description = "Django backend for BeatVault — MTProto proxy subscription service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.2",
    "djangorestframework>=3.16.1",
    "flower>=2.0.1",
    "gunicorn>=25.1.0",
    "pytelegrambotapi>=4.31.0",
    "python-dotenv>=1.2.2",
    "redis>=7.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "responses>=0.26.0",
]
